# TD3

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old  sdkconfig.temp
main/: CMakeLists.txt  main.c
main/Controller/: Controller.h
main/HAL/: HAL.c  HAL.h  HAL_beep.c  HAL_ble  HAL_ble.c  HAL_button.c  HAL_flash.c  HAL_http.c  HAL_lcd.c  HAL_power.c  HAL_sdmmc.c  HAL_sntp.c  HAL_uart.c  HAL_wifi.c
main/LCD/: lcd.c  lcd.h
main/Model/: Model.c  Model.h  Model_battery.c  Model_config.c  Model_gyro.c  Model_lvgl.c  Model_statusbar.c  Model_time.c
main/SD/: sdmmc.c  sdmmc.h
main/SNTP/: sntp.c  sntp.h
main/UI/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
main/UI/components/: ui_comp.c  ui_comp.h  ui_comp_alarm_comp.c  ui_comp_alarm_comp.h  ui_comp_batterygroup.h  ui_comp_clock_dot.c  ui_comp_clock_dot.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_scrolldots.c  ui_comp_scrolldots.h  ui_comp_small_label.c  ui_comp_small_label.h
main/UI/fonts/: ui_font_Number.c
main/UI/images/: ui_img_album_png.c  ui_img_backward_png.c  ui_img_btn_bg_1_png.c  ui_img_btn_bg_3_png.c  ui_img_call1_png.c  ui_img_call2_png.c  ui_img_chatbox2_png.c  ui_img_chatbox_png.c  ui_img_clock_hour_png.c  ui_img_clock_min_png.c  ui_img_clock_sec_png.c  ui_img_clockwise_min_png.c  ui_img_cloud_png.c  ui_img_forward_png.c  ui_img_pattern_png.c  ui_img_play_png.c  ui_img_rain_png.c  ui_img_s4_png.c  ui_img_s6_png.c  ui_img_s7_png.c  ui_img_sls_logo_png.c  ui_img_wave1_png.c  ui_img_weather_1_png.c  ui_img_weather_2_png.c  ui_img_weather_3_png.c
main/UI/screens/: ui_Chat.c  ui_Clock.c  ui_Music_Player.c  ui_Splash.c  ui_Weather.c  ui_call.c  ui_watch_analog.c
main/View/: CMakeLists.txt  Message.h  Page.c  Page.h  StatusBar.c  StatusBar.h  View.c  View.h  ui_events.h  ui_helpers.h
main/View/Assets/: background.c  ui_img_battery_png.c  ui_img_charge_png.c  ui_img_clock_png.c  ui_img_clockwise_hour_png.c  ui_img_clockwise_min_png.c  ui_img_clockwise_sec_png.c  ui_img_coulomb_png.c  ui_img_current_png.c  ui_img_file_png.c  ui_img_gyro_png.c  ui_img_music_png.c  ui_img_net_png.c  ui_img_press_png.c  ui_img_sdcard_png.c  ui_img_serial_png.c  ui_img_setting_png.c  ui_img_time_png.c  ui_img_voltage_png.c  ui_img_weather_png.c  ui_img_wifi_png.c
main/View/Fonts/: Fonts.c  Fonts.h  lv_gigi_72.c  lv_youshebiaotihei_24.c  lv_youyuan_21.c
main/View/Home/: home.c  home.h
main/View/Pages/Auth/: Auth.c  Auth.h
main/View/Pages/Battery/: Battery.c  Battery.h
main/View/Pages/Clock/: Clock.c  Clock.h
main/View/Pages/Files/: Files.c  Files.h
main/View/Pages/Gyro/: Gyro.c  (+1 more)
main/View/components/: ui_comp_batterygroup.c
main/View/images/: ui_img_bg1_png.c  ui_img_bg2_png.c  ui_img_bg3_png.c  ui_img_btn_bg_2_png.c  ui_img_clockwise_hour_png.c  ui_img_clockwise_sec_png.c  ui_img_clouds_png.c  ui_img_flash_png.c  ui_img_heart2_png.c  ui_img_house_png.c  ui_img_s1_png.c  ui_img_s2_png.c  ui_img_s3_png.c  ui_img_s5_png.c  ui_img_s8_png.c  ui_img_s9_png.c  ui_img_samatha_png.c  ui_img_sec_dot_png.c  ui_img_sun_png.c  ui_img_wave2_png.c  ui_img_weather_png.c  ui_img_weather_sun_cloud_png.c  ui_img_wind_png.c
main/View/screens/: ui_watch_digital.c  ui_weather_1.c
main/WIFI/: wifi.c  wifi.h
(+67 files in other folders)
